--- a/w6_positioning/positionstyles.css
+++ b/w6_positioning/positionstyles.css
@@ -2,29 +2,35 @@
 /* Activity 1 styles */
 .content1 {
   /* This is the parent of the activity 1 boxes. */
-
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-items: center;
 }
-.red1 { 
-  width: 100px; 
-  height: 100px; 
-  background-color: red; 
 
+.red1 { 
+  width: 100%; 
+  height: 200px; 
+  background-color: red; 
+  grid-row: 1/3;
 } 
+
 .green1 {
   width: 100px; 
   height: 100px; 
-  background-color: green; 
-
+  background-color: green;
 } 
+
 .yellow1 {
   width: 100px; 
   height: 100px; 
   background-color: gold; 
 } 
+
 .blue1 {
   width: 100px; 
   height: 100px; 
-  background-color: blue; 
+  background-color: blue;
+  grid-column: 1/3;
 } 
 /* Activity 2 styles */ 
 .content2 {
