--- a/w6_positioning/positionstyles.css
+++ b/w6_positioning/positionstyles.css
@@ -9,55 +9,76 @@
 
 .red1 { 
   width: 100%; 
-  height: 200px; 
+  height: 60px; 
   background-color: red; 
-  grid-row: 1/3;
+  grid-row: 1/2;
+  grid-column: 1/3;
 } 
 
 .green1 {
   width: 100px; 
   height: 100px; 
   background-color: green;
+  margin-top: 10px;
 } 
 
 .yellow1 {
   width: 100px; 
   height: 100px; 
   background-color: gold; 
+  margin-top: 10px;
 } 
 
 .blue1 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 60px; 
   background-color: blue;
+  grid-row: 5/6;
   grid-column: 1/3;
+  margin-top: 10px;
 } 
 /* Activity 2 styles */ 
 .content2 {
+  display: grid;
+  grid-template-columns: 50px 50px 50px 50px 50px;
+  grid-template-rows: 50px 50px 50px 50px 50px;
   /* This is the parent of the activity 2 boxes. */
 }
 .red2 {
   width: 100px; 
   height: 100px; 
-  background-color: red; 
+  background-color: red;
+  grid-column: 1/2;
 } 
 .green2 { 
   width: 100px; 
   height: 100px; 
   background-color: green; 
+  grid-column: 2/3;
+  grid-row: 2/3;
 } 
 .yellow2 {
   width: 100px; 
   height: 100px; 
   background-color: gold; 
+  grid-column: 3/4;
+  grid-row: 3/4;
 } 
 .blue2 {
   width: 100px; 
   height: 100px; 
   background-color: blue; 
+  grid-column: 4/5;
+  grid-row: 4/5;
 } 
 /* Activity 3 styles */ 
 .content3 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-items: center;
+  grid-column-gap: 0;
+  grid-column: 0;
+
   /* This is the parent of the activity 3 boxes. */
 }
 .red3 {
