--- a/w6_positioning/positionstyles.css
+++ b/w6_positioning/positionstyles.css
@@ -37,6 +37,9 @@
   grid-column: 1/3;
   margin-top: 10px;
 } 
+
+
+
 /* Activity 2 styles */ 
 .content2 {
   display: grid;
@@ -71,36 +74,40 @@
   grid-column: 4/5;
   grid-row: 4/5;
 } 
+
+
+
 /* Activity 3 styles */ 
 .content3 {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  justify-items: center;
-  grid-column-gap: 0;
-  grid-column: 0;
-
-  /* This is the parent of the activity 3 boxes. */
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-column-gap: 1;
 }
 .red3 {
-  width: 100px; 
-  height: 100px; 
-  background-color: red; 
-} 
+  grid-column: 1 / 4;
+  height: 100px;
+  background-color: red;
+}
 .green3 {
-  width: 100px; 
-  height: 100px; 
+  grid-column: 1;
+  height: 100px;
+  width: 140px;
   background-color: green;
-} 
+}
 .yellow3 {
-  width: 100px; 
-  height: 100px; 
-  background-color: gold; 
-} 
+  grid-column: 3;
+  height: 100px;
+  width: 140px;
+  background-color: gold;
+}
 .blue3 {
-  width: 100px;
-  height: 100px; 
-  background-color: blue; 
-} 
+  grid-column: 1 / 4;
+  height: 100px;
+  background-color: blue;
+}
+
+
+
 /* Activity 4 styles */ 
 .content4 {
   /* This is the parent of the activity 4 boxes. */
@@ -126,6 +133,9 @@
   height: 100px; 
   background-color: blue; 
 } 
+
+
+
 /* Activity 5 styles */ 
 .content5 {
   /* This is the parent of the activity 5 boxes. */
@@ -153,6 +163,9 @@
   height: 100px; 
   background-color: blue; 
 } 
+
+
+
 /* Activity 6 styles */ 
 .content6 {
   /* This is the parent of the activity 6 boxes. */
