--- a/w6_positioning/positionstyles.css
+++ b/w6_positioning/positionstyles.css
@@ -80,28 +80,30 @@
 /* Activity 3 styles */ 
 .content3 {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-column-gap: 1;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 80px;
+
 }
 .red3 {
-  grid-column: 1 / 4;
+  width: 100%;
+  grid-column: 1/3;
   height: 100px;
   background-color: red;
 }
 .green3 {
   grid-column: 1;
   height: 100px;
-  width: 140px;
+  width: 100%;
   background-color: green;
 }
 .yellow3 {
-  grid-column: 3;
+  grid-column: 2;
   height: 100px;
-  width: 140px;
+  width: 100%;
   background-color: gold;
 }
 .blue3 {
-  grid-column: 1 / 4;
+  grid-column: 1/3;
   height: 100px;
   background-color: blue;
 }
@@ -147,38 +149,32 @@ grid-row: 3;
 } 
 
 
-
 /* Activity 5 styles */ 
 .content5 {
   /* This is the parent of the activity 5 boxes. */
   height: 400px;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
 }
 .red5 { 
   width: 100%; 
-  height: 100%; 
+  height: 100px; 
   background-color: red;
   grid-column: 1/3;
   grid-row: 1;
 } 
 .green5 { 
-  width: 100px; 
-  height: 100px; 
-  background-color: green; 
-  grid-column: 2/3;
-  grid-row: 2/3;
+  width: 150px; 
+  height: 150px; 
+  background-color: green;
+  float: left; 
 } 
 .yellow5 {
   width: 100%; 
-  height: 100; 
+  height: 55%; 
   background-color: gold; 
-  grid-column: 1;
-  grid-row: 2;
 } 
 .blue5 {
   width: 100%; 
-  height: 100%; 
+  height: 100px; 
   background-color: blue; 
 } 
 
@@ -187,26 +183,42 @@ grid-row: 3;
 /* Activity 6 styles */ 
 .content6 {
   /* This is the parent of the activity 6 boxes. */
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+  height: 300px;
+  width: 50%;
 }
 .red6 {
-  width: 100px; 
-  height: 100px; 
-  background-color: red; 
+  width: 100%; 
+  height: 100%; 
+  background-color: red;
+  grid-column: 1/5;
+  grid-row: 1/3;
 } 
 .green6 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 100%; 
   background-color: green; 
+  grid-column: 1/3;
+  grid-row: 5/7;
+  z-index: 2;
 } 
 .yellow6 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 100%; 
   background-color: gold; 
+  grid-column: 5/7;
+  grid-row: 3/7;
+  z-index: 2;
 } 
 .blue6 {
-  width: 100px; 
-  height: 100px; 
-  background-color: blue; 
+  width: 100%; 
+  height: 100%; 
+  background-color: blue;
+  grid-column: 2/6;
+  grid-row: 2/6;
+  z-index: 1;
 } 
 
 
