--- a/wwr/style/page2.css
+++ b/wwr/style/page2.css
@@ -1,32 +1,250 @@
-.content-block {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 25px;
-    background-color: #182933;
-    border-radius: 62px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    gap: 25px;
-    min-height: 280px;
-    position: relative;
-    overflow: hidden;
-}
-
-.video-container {
-    width: 50%;
-    position: sticky;
-    top: 20vh; /* Keeps it in view when scrolling */
-    transform: translateZ(0);
-}
-
-.video-container video {
+#content {
+    max-width: 1600px;
     width: 100%;
-    border-radius: 25px;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    margin: 0 auto;
+    display: block;
 }
 
-.text-container {
-    flex: 1;
-    padding: 20px;
+#logo_link {
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;
+}
+
+.logo {
+    width: 80px;
+    max-width: 100%;
+    height: auto;
+    border-radius: 50%;
+}
+
+nav a {
+    text-align: center;
+    color: #e0e1dd;
+    text-decoration: none;
+}
+
+nav a:hover {
+    background-color: #3875b6;
+    color: #e0e1dd;
+}
+
+header {
+    display: grid;
+    grid-template-columns: 150px 80%;
+    
+}
+
+nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+       
+.home-title {
+    color: #0d1b2a;
+    font-size: 2em;
+    margin-top: 10px;
+}
+
+#hero {
+    display: grid;
+    text-align: center;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px; 
+}  
+
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+             
+#hero-img {
+    width: 100%;
+}
+
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    color: #5F6F84;
+    margin-top: +150px; 
+}
+
+#hero-msg h4 {
+    color: white;
+    margin-top: -30px; 
+}
+
+.button-box {
+    text-align: center;
+    margin-top: -20px; 
+}
+
+
+.home-grid {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+
+}
+
+#background {
+    height: 725px;
+    background-color: #e0e1dd;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400&family=Montserrat:wght@400&display=swap');
+
+body {
+    font-family: 'Poppins', Arial, sans-serif;
+    background-color: #f9f9f8;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
+}
+
+.home-title, .msg h2 {
+    font-family: 'Montserrat', Arial, sans-serif;
+}
+
+.book, .join {
+    background-color: #778da9;
+    color: #333;
+    text-decoration: none;
+    font-size: 18px;
+    margin-top: 50px;
+    border-radius: 5px;
+}
+
+.card-img, .mountains {
+    width: 100%;
+    border: 10px solid #778da9;
+}
+
+.card-img {
+    border: 10px solid #d9c2a3;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}   
+
+main section {
+    text-align: center;
+}
+
+main section img {
+    box-sizing: border-box;
+}
+
+#background {
+    height: 725px;
+    background-color: #e0e1dd;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400&family=Bebas+Neue&display=swap');
+
+body {
+    font-family: 'Poppins', Arial, sans-serif;
+    background-color: #f9f9f8;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
+}
+
+.home-title, .msg h2 {
+    font-family: 'Bebas Neue', Arial, sans-serif;
+}
+
+.book, .join {
+    background-color: #778da9;
+    color: #333;
+    text-decoration: none;
+    font-size: 18px;
+    margin-top: 50px;
+}
+
+.mountains {
+    grid-column: 2 / 7;
+    grid-row: 5 / 8;
+    width: 100%;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.msg {
+    background-color: #fff3cd;
+    color: #856404;
+    line-height: 1.5em;
+    padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.msg h2 {
+    color: #856404;
+    margin: -4;
+}
+
+.msg p {
+    color: #333;
+    font-size: .8em;
+}
+
+footer {
+    background-color: #1b263b;
+    color: white;
+    padding: 25px 50px;
+    margin-top: 200px; 
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+footer a {
+    color: #e0e1dd;
+    text-decoration: none;
+}
+
+footer a:hover {
     color: #fff;
 }
+
+footer p {
+    font-size: 1.2em;
+}
+
+footer p a:hover {
+    text-decoration: underline;
+}
+
+.icon {
+    width: 80px;
+}
+
+#hero-img {
+    width: 100%;
+}
+
+.rivers-card {
+    grid-column: 2 / 4;
+    grid-row: 2 / 3;
+}
+
+.camping-card {
+    grid-column: 5 / 7;
+    grid-row: 2 / 3;
+}
+
+.rapids-card {
+    grid-column: 8 / 10;
+    grid-row: 2 / 3;
+}
+
+#background {
+    grid-column: 1 / 11;
+    grid-row: 4 / 9;
+}
+
